convert/objects/User.object
<CustomObject>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <relationshipName>Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <label>Regional Manager</label>
        <relationshipName>RegionalManager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>sf_devops__Bitbucket_Primary_Email_Address__c</fullName>
        <description>The primary email address used to configure git when we are connecting to a Bitbucket Repository</description>
        <label>Bitbucket Primary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sf_devops__GitHub_Primary_Email_Address__c</fullName>
        <description>The primary email address used to configure git when we are connecting to a GitHub Repository</description>
        <label>GitHub Primary Email Address</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
</CustomObject>